Don't run JEP456 tests with enable-preview
In java 22 https://openjdk.org/jeps/456 is stable feature thus there is
no need to pass --enable-preview for tests of this feature.